<resources>
    <string name="app_name">Trivial</string>
    <string name="action_settings">Settings</string>
    <string name="start_game_button_text">Play Game</string>
    <string name="highscores_button_text">Highscores</string>
    <string name="welcome_text">Welcome to Trivial</string>
    <string name="highscoresfragment_placeholder">Hello Highscores Fragment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_fragment_placeholder_text">Please wait&#8230;</string>
    <string name="no_prev_question_error_msg">You are at the start of the game!</string>
    <string name="no_next_question_error_msg">You have reached the last question!</string>
    <string name="default_highscores_api_url">http://trivial.madeofmagicandwires.online</string>
    <string name="highscores_api_settings_category">Highscore API Settings</string>
    <string name="highscore_api_url_pref_key">highscore_api_url</string>
    <string name="highscore_api_port_pref_key">highscore_api_port</string>
    <string name="shared_preferences_file">Trivial.db</string>
</resources>
