<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        style="@style/TextAppearance.AppCompat.Headline"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="#ffff"
        app:cornerRadius="50dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAppearance="@style/AppTheme.MaterialButton"


        android:minWidth="150dp"
        android:text="@string/start_game_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"

        android:onClick="startGame"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/showScores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/highscores_button_text"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="#ffff"
        style="@style/AppTheme.MaterialButton"


        app:layout_constraintLeft_toLeftOf="@id/startGame"
        app:layout_constraintRight_toRightOf="@id/startGame"
        app:layout_constraintTop_toBottomOf="@id/startGame"

        android:onClick="showScores" />



</android.support.constraint.ConstraintLayout>